# testDD1

./: .cproject  .gitignore  .project  CMakeLists.txt  main.cpp
GreatCMakeCookOff/modules/: FindFFTW3.cmake
Parallel/: CMakeLists.txt  MPI.cpp  MPI.h  fftw3mpi.cpp  fftw3mpi.h
Tools/: CMakeLists.txt  Dimensions.hpp  MyHash.hpp  MyTools.cpp  MyTools.hpp  MyUtilClass.h
abseil-cpp/: .project  CMakeLists.txt
cmake/: LookUp-GreatCMakeCookOff.cmake
fftwpp/: CMakeLists.txt  mpigroup.h
